test map corner bug fix on mobile 2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -433,6 +433,9 @@ button {
     height: 450px;
     border: 3px solid #FFFFFF;
     border-radius: 24px;
+    -webkit-border-radius: 24px;
+    -moz-border-radius: 24px;
+    -o-border-radius: 24px;
     position: relative;
     pointer-events: all;
     overflow: hidden;
